--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Mini blogg</title>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="../css/mobile.css" />
          <link rel="stylesheet" href="../css/print.css" type="text/css" media="print"/>
     </head>
         <body>
@@ -12,7 +13,7 @@
        
            <div id="header">
            <img id="logotyp" src="../pics/Logo-test.png">
-               <h1>Kontakt!</h1>
+              <div id=headerText> <h1>Kontakt!</h1></div>
            </div>
        <div id="content">
         
