--- a/pages/blogginlagg1.html
+++ b/pages/blogginlagg1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Mini blogg</title>
+        <title>Mini blogg</title>s
         <link rel="stylesheet" href="../css/style.css" media="screen and (min-width: 481px)" type="text/css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="../css/mobile.css" />
         <link rel="stylesheet" href="../css/print.css" type="text/css" media="print"/>
