--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -17,7 +17,7 @@
            </div>
        <div id="content">
         
-            <form action=" http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbintro/form.php" method="GET">
+            <form action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbintro/form.php" method="POST">
                 <fieldset class="person_uppgifter">
                         <legend id="contact_title">Person uppgifter:</legend>
                         
