--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Mini blogg</title>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
-        <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="./css/mobile.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="../css/mobile.css" />
          <link rel="stylesheet" href="../css/print.css" type="text/css" media="print"/>
     </head>
         <body>
@@ -67,6 +67,7 @@
                         <p> skrivet av Jimmy Andreasson, 2014-09-idag.</p>
                     </div>
     </div>
+  
     
     </body>
 </html>
