sprite borgar ta sig

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Jimmys blogg</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="css/tablet.css" />
-        <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="css/mobile.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="css/mobile.cs" />
         <link rel="stylesheet" href="css/print.css" type="text/css" media="print"/>
     </head>
         <body>
@@ -20,9 +20,11 @@
 <div id="navigation">
     <div id="links"> 
        <h4>se även</h4>
-             <li> <a href="pages/laborationer.html">laborationer</a> </li>
-             <li> <a href="pages/presentation.html">presentationer</a> </li>
-             <li> <a href="pages/kontakt.html">kontakt</a> </li>
+    
+             <span class="navLabration"><a href="pages/laborationer.html">labrationer</a></span>
+             <span class="navPresentation"><a href="pages/presentation.html">om mig</a></span>
+             <span class="navKontakt"><a href="pages/kontakt.html">kontakt</a></span>
+  
        </div>
      </div>
              
