--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>Jimmys blogg</title>
+        <link rel="shortcut icon" type="image/png" href="pics/favicon.ico"/>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="css/tablet.css" />
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="css/mobile.css" />
