--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Mini blogg</title>
+         <link rel="shortcut icon" type="image/png" href="pics/favicon.ico"/>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
           <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="../css/mobile.css" />
         <link rel="stylesheet" href="../css/print.css" type="text/css" media="print"/>
