fragor och svar

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Mini blogg</title>
-         <link rel="shortcut icon" type="image/png" href="pics/favicon.ico"/>
+         <link rel="shortcut icon" type="image/png" href="../pics/favicon.ico"/>
         <link rel="stylesheet" href="../css/style.css" type="text/css" media="screen"/>
          <link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="../css/mobile.css" />
         <link rel="stylesheet" href="../css/print.css" type="text/css" media="print"/>
@@ -150,12 +150,12 @@
         
         <li>Absoluta och relativa sökvägar</li>
             <ol>
-                <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
-                <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
-                <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
-                <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
-                <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html? </li>
-                <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html:</li>
+                <dl>1.4.1 Vilken är den absoluta sökvägen till filen bottom.html?<br> http://www.server.se/html/pages/bottom.html</li>
+                <dl>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?<br>pages/top.html</li>
+                <dl>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?<br>../../index.html</li>
+                <dl>1.4.4. Vilken är den absoluta sökvägen till filen index.html?<br> http://www.server.se/index.html</li>
+                <dl>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?<br>bottom.html</li>
+                <dl>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html:<br>html/pages/top.html</li>
             </ol>
     </ol>
          <a id="laboration3"><h3>laboration 3</h3></a>
