--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -21,9 +21,10 @@
                 <div id="links"> 
                    
                      <h4>se även</h4>
-                  <span class="navHome"><a href="../index.html">hem</a></span>
-                     <span class="navLabration"><a href="laborationer.html">labrationer</a></span>
-                         <span class="navPresentation"><a href="presentation.html">om mig</a></span>
+                   <span class="navHome"><a href="../index.html">hem</a></span>
+                         <span class="navLabration"><a href="laborationer.html">labrationer</a></span>
+                             <span class="navPresentation"><a href="presentation.html">om mig</a></span>
+                                 <span class="navKontakt"><a href="kontakt.html">kontakt</a></span>
             
                </div>   
            </div>
